[package]
name = "big_data"
version = "0.1.2"
authors = ["yangcancai <yangcancai0112@gmail.com>"]
license-file = "LICENSE"
build = "build.rs"
description = "Safe Rust code for creating Erlang NIF to store big data"
repository = "https://github.com/yangcancai/big_data/"
homepage = "https://github.com/yangcancai/big_data"


[lib]
name = "big_data"
crate-type = ["cdylib","rlib"]
[[bench]]
name = "bench"
harness = false
[dependencies]
rustler = "0.22.0-rc.0"
serde = { version = "1.0", features = ["derive"] }
ordermap = "0.3.5"
bencher = "0.1.5"
rand = "0.8.0"

