[package]
name = "redis_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "redis_api"
crate-type=["rlib","cdylib"]

[dependencies]
redis-module = { git = "https://github.com/RedisLabsModules/redismodule-rs.git", branch = "master", features = ["experimental-api"]}
core = {path = "../core"}
anyhow = "*"